animate overflow issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ body {
   background-color: var(--clr-p-11);
   color: var(--clr-p-1);
   width: 100%;
+  /* overflow: hidden; */
 }
 
 html {
@@ -169,6 +170,9 @@ nav.vertical-nav a {
   filter: blur(5px);
   transition: all 0.9s;
   transform: translate(-50%);
+}
+.hidden > div {
+  overflow: hidden;
 }
 .hidden > div > div:nth-child(2n) {
   transition: all 0.9s;
